--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Business Helper</title>
+    <title>InterviewIQ</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css">
     <link href="../static/signup.css" rel="stylesheet">
