--- a/business_app/app/templates/register.html
+++ b/business_app/app/templates/register.html
@@ -5,7 +5,7 @@
   <div class="col-md-7 text-center text-md-left ">
     <h1>Built for future leaders</h1>
       <p class="alt-lead mb-4">
-        <b>Button</b> is a tool inspiried by the bright minds of today.
+        <b>InterviewIQ</b> is a tool inspiried by the bright minds of today.
           From Theatre to Computer Science to Business, you can start here to gurantee a successful, bright future.
       </p>
   </div>
