--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -1,6 +1,13 @@
 {% extends "header.html" %}
 {% block content %}
 
-<h1>You have logged in!</h1>
+<div class="dropdown">
+  <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+  <div id="myDropdown" class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div> 
 
 {% endblock %}
