--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -1,6 +1,13 @@
 {% extends "header.html" %}
 {% block content %}
 
+<html>
+  <head>
+    <title>YourProfile</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css">
+<link href="../static/ClothingDropDown.css" rel="stylesheet">
+<head>    
 <div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Dropdown</button>
   <div id="myDropdown" class="dropdown-content">
