--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="header">
   <ul class="nav nav-pills pull-left">
-    <li role="presentation" class="active"><a href="/ClothingDropDown.html" style="color:#004E64; font-weight:bold">Home</a></li>
+    <li role="presentation" class="active"><a href=/index.html" style="color:#004E64; font-weight:bold">Home</a></li>
   </ul>
   <ul class="nav nav-pills pull-right">
     <label style="color:#004E64; font-weight:bold">{{ acct }}</label>
