--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -6,7 +6,7 @@
     <title>YourProfile</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css">
-<link href="../static/ClothingDropDown.css" rel="stylesheet">
+<link href="../static/menu.css" rel="stylesheet">
 <head>    
 <div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Dropdown</button>
