--- a/business_app/app/static/menu.css
+++ b/business_app/app/static/menu.css
@@ -1,46 +1,76 @@
- /* Dropdown Button */
-.dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
-    background-color: #3e8e41;
-} 
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      color: #444;
+    }
+    /*
+     * Formatting the header area
+     */
+    header {
+      background-color: #DFB887;
+      height: 35px;
+      width: 100%;
+      opacity: .9;
+      margin-bottom: 10px;
+    }
+    header h1.logo {
+      margin: 0;
+      font-size: 1.7em;
+      color: #fff;
+      text-transform: uppercase;
+      float: left;
+    }
+    header h1.logo:hover {
+      color: #fff;
+      text-decoration: none;
+    }
+    /*
+     * Centering the body content
+     */
+    .container {
+      width: 1200px;
+      margin: 0 auto;
+    }
+    div.home {
+      padding: 10px 0 30px 0;
+      background-color: #E6E6FA;
+      -webkit-border-radius: 6px;
+         -moz-border-radius: 6px;
+              border-radius: 6px;
+    }
+    div.about {
+      padding: 10px 0 30px 0;
+      background-color: #E6E6FA;
+      -webkit-border-radius: 6px;
+         -moz-border-radius: 6px;
+              border-radius: 6px;
+    }
+    h2 {
+      font-size: 3em;
+      margin-top: 40px;
+      text-align: center;
+      letter-spacing: -2px;
+    }
+    h3 {
+      font-size: 1.7em;
+      font-weight: 100;
+      margin-top: 30px;
+      text-align: center;
+      letter-spacing: -1px;
+      color: #999;
+    }
+    .menu {
+      float: right;
+      margin-top: 8px;
+    }
+    .menu li {
+      display: inline;
+    }
+    .menu li + li {
+      margin-left: 35px;
+    }
+    .menu li a {
+      color: #444;
+      text-decoration: none;
+    }
