--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -1,27 +1,11 @@
 {% extends "header.html" %}
 {% block content %}
 
-    <!DOCTYPE html>
-    <html>
-      <head>
-        <title>Menu</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='static/menu.css') }}">
-      </head>
-      <body>
-        <header>
-          <div class="container">
-            <h1 class="logo">InterviewIQ Home Page</h1>
-            <strong><nav>
-              <ul class="menu">
-                <li><a href="{{ url_for('home') }}">Home</a></li>
-                <li><a href="{{ url_for('about') }}">About</a></li>
-              </ul>
-            </nav></strong>
-          </div>
-        </header>
-        <div class="container">
-          {% block content %}
-          {% endblock %}
-        </div>
-      </body>
-    </html>
+<div class="topnav" id="myTopnav">
+  <a href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+
+{% endblock %} 
