--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -1,6 +1,15 @@
 {% extends "header.html" %}
 {% block content %}
 
+
+<html>
+  <head>
+    <title>InterviewIQ</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css">
+    <link href="../static/menu.css" rel="stylesheet">
+</head>
+
 <div class="topnav" id="myTopnav">
   <a href="#home">Home</a>
   <a href="#news">News</a>
