--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -12,9 +12,9 @@
 
 <div class="topnav" id="myTopnav">
   <a href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a href="#news">Profile</a>
+  <a href="#contact">Interview Q&A</a>
+  <a href="#about">Add an Interview</a>
 </div>
 
 {% endblock %} 
