--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -12,6 +12,9 @@
 
 <div class="topnav" id="myTopnav">
   <a href="#home">Home</a>
+    <select name = "Home" id = "Home"> 
+      <option value="http://www.google.com">GOOGLE</option>
+  </select>
   <a href="#news">Profile</a>
   <a href="#contact">Interview Q&A</a>
   <a href="#about">Add an Interview</a>
