--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -10,21 +10,37 @@
     <link href="../static/menu.css" rel="stylesheet">
 </head>
   
-<ul class = "myNav">
-  <li><a href = "#">Home</a></li>
-  <li>
-    <a href="#">Interview <span class="arroa">&#9660;</span></a>    
-<!--<div class="topnav" id="myTopnav">-->
-  <ul class="sub-menu">
-    <li><a href="#home">Home</a></li>
-    <li><a href="#news">Profile</a></li>
-    <li><a href="#contact">Interview Q&A</a></li>
-    <li><a href="#about">Add an Interview</a></li>
-    </ul>
-  </li>
-    <li><a href="#">T.V. Shows</a></li>
-    <li class="current-item"><a href="#">Photos</a></li>
-    <li><a href="#">Site Help</a></li>
-  </ul>
-
+  <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>HTML5, CSS3 and jQuery Navigation menu</title>
+        <link rel="stylesheet" href="css/nav.css">
+        <!--[if IE]>
+            <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+    </head>
+    <body class="no-js">
+        <nav id="topNav">
+                <ul>
+                    <li><a href="#" title="Nav Link 1">Nav Link 1</a></li>
+                <li>
+                    <a href="#" title="Nav Link 1">Nav Link 2</a>
+                    <ul>  
+                        <li><a href="#" title="Sub Nav Link 1">Sub Nav Link 1</a></li>
+                        <li><a href="#" title="Sub Nav Link 2">Sub Nav Link 2</a></li>
+                        <li><a href="#" title="Sub Nav Link 3">Sub Nav Link 3</a></li>
+                        <li><a href="#" title="Sub Nav Link 4">Sub Nav Link 4</a></li>
+                        <li class="last"><a href="#" title="Sub Nav Link 5">Sub Nav Link 5</a></li>
+                    </ul>                
+                </li>
+                <li><a href="#" title="Nav Link 1">Nav Link 3</a></li>
+                <li><a href="#" title="Nav Link 1">Nav Link 4</a></li>
+                <li><a href="#" title="Nav Link 1">Nav Link 5</a></li>
+            </ul>
+        </nav>
+        <script src="js/jquery.js"></script>
+        <script src="js/modernizr.js"></script>
+    </body>
+</html>
 {% endblock %} 
