--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -10,37 +10,18 @@
     <link href="../static/menu.css" rel="stylesheet">
 </head>
   
-  <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>HTML5, CSS3 and jQuery Navigation menu</title>
-        <link rel="stylesheet" href="css/nav.css">
-        <!--[if IE]>
-            <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
-    </head>
-    <body class="no-js">
-        <nav id="topNav">
-                <ul>
-                    <li><a href="#" title="Nav Link 1">Nav Link 1</a></li>
-                <li>
-                    <a href="#" title="Nav Link 1">Nav Link 2</a>
-                    <ul>  
-                        <li><a href="#" title="Sub Nav Link 1">Sub Nav Link 1</a></li>
-                        <li><a href="#" title="Sub Nav Link 2">Sub Nav Link 2</a></li>
-                        <li><a href="#" title="Sub Nav Link 3">Sub Nav Link 3</a></li>
-                        <li><a href="#" title="Sub Nav Link 4">Sub Nav Link 4</a></li>
-                        <li class="last"><a href="#" title="Sub Nav Link 5">Sub Nav Link 5</a></li>
-                    </ul>                
-                </li>
-                <li><a href="#" title="Nav Link 1">Nav Link 3</a></li>
-                <li><a href="#" title="Nav Link 1">Nav Link 4</a></li>
-                <li><a href="#" title="Nav Link 1">Nav Link 5</a></li>
-            </ul>
-        </nav>
-        <script src="js/jquery.js"></script>
-        <script src="js/modernizr.js"></script>
-    </body>
-</html>
+ <div class="navbar">
+  <a href="#home">Home</a>
+  <a href="#news">News</a>
+  <div class="dropdown">
+    <button class="dropbtn">Dropdown
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div>
+</div> 
 {% endblock %} 
