--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -10,18 +10,23 @@
     <link href="../static/menu.css" rel="stylesheet">
 </head>
   
- <div class="navbar">
-  <a href="#home">Home</a>
-  <a href="#news">News</a>
-  <div class="dropdown">
-    <button class="dropbtn">Dropdown
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
-    </div>
-  </div>
-</div> 
+ <div class="menu-wrap">
+    <nav class="menu">
+        <ul class="clearfix">
+            <li><a href="#">Home</a></li>
+            <li>
+                <a href="#">Movies <span class="arrow">&#9660;</span></a>
+                <ul class="sub-menu">
+                    <li><a href="#">In Cinemas Now</a></li>
+                    <li><a href="#">Coming Soon</a></li>
+                    <li><a href="#">On DVD/Blu-ray</a></li>
+                    <li><a href="#">Showtimes &amp; Tickets</a></li>
+                </ul>
+            </li>
+            <li><a href="#">T.V. Shows</a></li>
+            <li class="current-item"><a href="#">Photos</a></li>
+            <li><a href="#">Site Help</a></li>
+        </ul>
+    </nav>
+</div>
 {% endblock %} 
