--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -1,13 +1,9 @@
 {% extends "header.html" %}
 {% block content %}
 
-
-<html>
-  <head>
+<head>
     <title>InterviewIQ</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css">
-    <link href="../static/menu.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../static/menu.css"
 </head>
   
  <h1>Simple Pure CSS Drop Down Menu</h1>
