--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -1,33 +1,17 @@
 {% extends "header.html" %}
 {% block content %}
-<html>
+<!DOCTYPE html>
+  <html>
   <head>
-    <title>InterviewIQ</title> 
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ek+Mukta">
-    <link href="../static/menu.css" rel="stylesheet">
+    <title>InterviewIQ</title>
+      <link rel="stylesheet" href="../static/menu.css.css">
 </head>
-  
-  <div class="menu-wrap">
-    <nav class="menu">
-        <ul class="clearfix">
-            <li><a href="#">Home</a></li>
-            <li>
-                <a href="#">Movies <span class="arrow">&#9660;</span></a>
- 
-                <ul class="sub-menu">
-                    <li><a href="#">In Cinemas Now</a></li>
-                    <li><a href="#">Coming Soon</a></li>
-                    <li><a href="#">On DVD/Blu-ray</a></li>
-                    <li><a href="#">Showtimes &amp; Tickets</a></li>
-                </ul>
-            </li>
-            <li><a href="#">T.V. Shows</a></li>
-            <li class="current-item"><a href="#">Photos</a></li>
-            <li><a href="#">Site Help</a></li>
-        </ul>
-    </nav>
-</div>
-  
-  
-{% endblock %} 
+<body>
+
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
 </html> 
+{% endblock %} 
+
