--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -1,10 +1,8 @@
-{% extends "header.html" %}
-{% block content %}
 <!DOCTYPE html>
   <html>
   <head>
     <title>InterviewIQ</title>
-      <link rel="stylesheet" href="../static/menu.css.css">
+      <link rel="stylesheet" href="menu.css.css">
 </head>
 <body>
 
@@ -13,5 +11,4 @@
 
 </body>
 </html> 
-{% endblock %} 
 
