--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -2,7 +2,7 @@
   <html>
   <head>
     <title>InterviewIQ</title>
-      <link rel="stylesheet" href="menu.css.css">
+      <link rel="stylesheet" href="../static/menu.css.css">
 </head>
 <body>
 
