--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-  <html>
+<html>
   <head>
-    <title>InterviewIQ</title>
-      <link rel="stylesheet" href="../static/menu.css.css">
+    <title>IQHomePage</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css">
+    <link href="../static/menu.css" rel="stylesheet">
 </head>
 <body>
 
