--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>IQHomePage</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css">
-    <link href="../static/menu.css" rel="stylesheet">
+    <style>
+    h1 {color:red;}
+    p {color:blue;}
+</style>
 </head>
 <body>
 
