--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>IQhomePage</title> 
     <style>
-    h1 {color:red;}
-    p {color:blue;}
-</style>
+   ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: #333;
+      }
+
+   li {
+      float: left;
+      }
+
+  li a {
+          display: block;
+          color: white;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+      }
+
+      /* Change the link color to #111 (black) on hover */
+      li a:hover {
+          background-color: #111;
+      }
+  </style>
 </head>
 <body>
-
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+  
+ <ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li style="float:right"><a class="active" href="#about">About</a></li>
+</ul> 
 
 </body>
 </html> 
