--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -3,6 +3,13 @@
   <head>
     <title>IQhomePage</title> 
     <style>
+      
+   div {
+      width: 60px;
+      height: 60px;
+      border: 1px solid black;
+      }
+
    ul {
       list-style-type: none;
       margin: 0;
@@ -27,15 +34,19 @@
       li a:hover {
           background-color: #111;
       }
+      
   </style>
 </head>
 <body>
   
+  <div style="background-color:black;color:white;padding:20px;">
+  
  <ul>
   <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li style="float:right"><a class="active" href="#about">About</a></li>
+  <li><a href="#profile">Profile</a></li>
+  <li><a href="#interviewq&a">IntervewQ&A</a></li>
+  <li><a href="#clothing">Clothing</a></li>
+  <li style="float:right"><a class="active" href="#aboutus">AboutUs</a></li>
 </ul> 
 
 </body>
