--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -16,33 +16,71 @@
       float: left;
       }
 
-  li a {
-          display: block;
-          color: white;
-          text-align: center;
-          padding: 14px 16px;
-          text-decoration: none;
-      }
+   li a, .dropbtn {
+      display: inline-block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+  }
 
-      /* Change the link color to #111 (black) on hover */
-      li a:hover {
-          background-color: #111;
-      }
-      
-  </style>
-</head>
+  li a:hover, .dropdown:hover .dropbtn {
+      background-color: red;
+  }
+
+  li.dropdown {
+      display: inline-block;
+  }
+
+  .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+  }
+
+  .dropdown-content a {
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      text-align: left;
+  }
+
+  .dropdown-content a:hover {background-color: #f1f1f1}
+
+  .dropdown:hover .dropdown-content {
+      display: block;
+  }
+
+    </style>
+  </head>
+  
 <body>
   
-  <div style="background-color:black;color:white;padding:20px;">
+<div style="background-color:black;color:white;padding:20px;">
   
  <ul>
   <li><a href="#home">Home</a></li>
   <li><a href="#profile">Profile</a></li>
   <li><a href="#interviewq&a">IntervewQ&A</a></li>
   <li><a href="#clothing">Clothing</a></li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </li>
   <li style="float:right"><a class="active" href="#aboutus">AboutUs</a></li>
 </ul> 
+    
+<h3>Dropdown Menu inside a Navigation Bar</h3>
+<p>Hover over the "Dropdown" link to see the dropdown menu.</p>
 
 </body>
 </html> 
-
+  
