--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -4,20 +4,14 @@
     <title>IQhomePage</title> 
     <style>
 
-    #container {
-      position: relative;
-    }
-
-    #background {
-       position: absolute;
-       top: 0;
-       left: 0;
-       bottom: 0;
-       right: 0;
-       z-index: -1;
-       height:10000px;
-
-    background-image:url(https://www.istockphoto.com/photo/interview-in-progress-gm139977634-2144669.jpg)
+    body {background-color: lightblue;}
+    .container {
+      height: 100%;
+      width: 100%;
+      display: flex;
+      position: fixed;
+      align-items: center;
+      justify-content: center;
     }
 
    ul {
@@ -76,12 +70,9 @@
   
 <body>
   
-<div id="container">
-    <div id="background">
-    Text to have as background
-    </div>
-  <br />
-    Normal contents
+  
+<div class="container">
+  <div>centered text!</div>
 </div>
   
  <ul>
