--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -4,15 +4,6 @@
     <title>IQhomePage</title> 
     <style>
 
-    body {background-color: lightblue;}
-    .container {
-      height: 100%;
-      width: 100%;
-      display: flex;
-      position: fixed;
-      align-items: center;
-      justify-content: center;
-    }
 
    ul {
       list-style-type: none;
@@ -65,15 +56,22 @@
       display: block;
   }
 
+  
+  body {background-color: lightblue;}
+  .container {
+    height: 100%;
+    width: 100%;
+    font-size: medium; 
+    display: flex;
+    position: fixed;
+    align-items: center;
+    justify-content: center;
+  }    
+      
     </style>
   </head>
   
 <body>
-  
-  
-<div class="container">
-  <div>centered text!</div>
-</div>
   
  <ul>
   <li><a href="#home">Home</a></li>
@@ -82,14 +80,16 @@
   <li><a href="#clothing">Clothing</a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
-    <div class="dropdown-content">
+    <div class="dropdown-content container">
       <a href="#">Link 1</a>
       <a href="#">Link 2</a>
       <a href="#">Link 3</a>
+      <div>Welcome to your InterviewIQ profile!</div>
     </div>
   </li>
   <li style="float:right"><a class="active" href="#aboutus">AboutUs</a></li>
 </ul> 
+    
     
 <h3>Dropdown Menu inside a Navigation Bar</h3>
 <p>Hover over the "Dropdown" link to see the dropdown menu.</p>
