--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -56,18 +56,7 @@
       display: block;
   }
 
-  
-  body {background-color: lightblue;}
-  .container {
-    height: 100%;
-    width: 100%;
-    font-size: medium; 
-    display: flex;
-    position: fixed;
-    align-items: center;
-    justify-content: center;
-  }    
-      
+ 
     </style>
   </head>
   
@@ -80,15 +69,22 @@
   <li><a href="#clothing">Clothing</a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
-    <div class="dropdown-content container">
+    <div class="dropdown-content">
       <a href="#">Link 1</a>
       <a href="#">Link 2</a>
       <a href="#">Link 3</a>
-      <div>Welcome to your InterviewIQ profile!</div>
     </div>
   </li>
   <li style="float:right"><a class="active" href="#aboutus">AboutUs</a></li>
 </ul> 
+  
+<div class="jumbotron jumbotron-codelines">
+  <div class= "col-md-7 text-center">
+    <h1>Welcome to your InterviewIQ Profile!</h1>
+    <p class="alt-lead mb-4">
+      <b>Your InterviewIQ Profile</b> will allow you to organize your interviews, and find the most appropriate attrie for the occasion</p>
+    </div>
+  </div>  
     
     
 <h3>Dropdown Menu inside a Navigation Bar</h3>
