Added clothing store suggestions to clothing.html

--- a/business_app/app/templates/clothing.html
+++ b/business_app/app/templates/clothing.html
@@ -19,14 +19,23 @@
 <li>Khakis or corduroys</li>
 <li>Vests and sweaters</li>
 <li>Casual shoes, but no athletic shoes</li>
+</ul>
 
 <h2>Business Formal Dress:</h2>
 <ul style="list-style-type:disc">
 <li>Suits or jackets with dress shirts, ties, formal leather-like shoes</li>
 <li>Skirt suits or pant suits</li>
 <li>Stockings and closed toe leather heel shoes</li>
+</ul>
 
-
+<h2>Clothing Store Suggestions:</h2>
+<ul style="list-style-type:none">
+<li><a href="https://www.express.com/fashion/jeans">Express</a></li>
+<li><a href="http://www.oldnavy.com/">Old Navy</a></li>
+<li><a href="http://www.bananarepublic.com/">Banana Republic</a></li>
+<li><a href="https://www.jcrew.com/">J Crew</a></li>
+<li><a href="https://shop.nordstrom.com/">Nordstrom</a></li>
+</ul>
 
 </body>
 </html>
