--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -65,7 +65,7 @@
  <ul>
   <li><a href="#home">Home</a></li>
   <li><a href="agenda.html">Profile</a></li>
-  <li><a href ="calendar.html">Calendar</a></li>
+  <li><a href ="Calendar.html">Calendar</a></li>
   <li><a href="clothing.html">Clothing</a></li>
   <li><a href="interviewQA.html">IntervieQ&A</a></li>	
   <li class="dropdown">
