--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -4,6 +4,8 @@
     <title>IQhomePage</title> 
     <style>
 
+   body { background-color: lightblue; 
+   }
 
    ul {
       list-style-type: none;
@@ -56,6 +58,11 @@
       display: block;
   }
 
+  p{
+	border-style: solid; 
+	border-color: blue; 
+   }
+
  
     </style>
   </head>
@@ -69,14 +76,14 @@
   <li><a href="clothing.html">Clothing</a></li>
   <li><a href="interviewQA.html">IntervieQ&A</a></li>	
   <li class="dropdown">
-    <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
+    <a href="javascript:void(0)" class="dropbtn"> Interviews</a>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="#">Interview 1</a>
+      <a href="#">Intervew 2</a>
+      <a href="#">Interview 3</a>
     </div>
   </li>
-  <li style="float:right"><a class="active" href="#aboutus">AboutUs</a></li>
+  <li style="float:right"><a class="active" href="about.html">AboutUs</a></li>
 </ul> 
   
 <div class="jumbotron jumbotron-codelines">
@@ -88,8 +95,8 @@
   </div>  
     
     
-<h3>Dropdown Menu inside a Navigation Bar</h3>
-<p>Hover over the "Dropdown" link to see the dropdown menu.</p>
+<h3>Dropdown Menu inside a Navigation Bar allows you to see your current interviews</h3>
+<p>The key to success: is the way you dress.</p>
 
 </body>
 </html> 
