Testing for accordion dropdown

--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -25,6 +25,12 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <form>
 <input type="text">
 </form>
+    
+    <button class="accordion">Tips</button>
+<div class="panel">
+  <p>Testing...</p>
+</div>
+
   
   <p>What are some of your short and long term goals?</p>
 <form>
