--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -74,12 +74,12 @@
   <li><a href="agenda.html">Profile</a></li>
   <li><a href ="Calendar.html">Calendar</a></li>
   <li><a href="clothing.html">Clothing</a></li>
-  <li><a href="interviewQA.html">IntervieQ&A</a></li>	
+  <li><a href="interviewQA.html">InterviewQ&A</a></li>	
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn"> Interviews</a>
     <div class="dropdown-content">
       <a href="#">Interview 1</a>
-      <a href="#">Intervew 2</a>
+      <a href="#">Interview 2</a>
       <a href="#">Interview 3</a>
     </div>
   </li>
