--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -5,10 +5,9 @@
     
 <html>
   <head>
-    <title>InterviewQ&A</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css">
-    <link href="../app/interviewQA.css" rel="stylesheet">
+    <link href="../static/interviewQA.css" rel="stylesheet">
 </head>
 
 <h1>InterviewIQ</h1>
