--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -25,7 +25,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <input type="text">
 </form>
     
-    <button class="accordion">Tips</button>
+    <button class="accordion">Tips + Do's/Don"ts</button>
 <div class="panel">
   <p>Testing...</p>
 </div>
