Adding javascript file link

--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -87,7 +87,8 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <input type="text">
 </form>
   
-
+<script src="interviewQA.js"></script>
+    
 </body>
 </html>
 
