--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -87,7 +87,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <input type="text">
 </form>
   
-<script src="interviewQA.js"></script>
+<script src="https://github.com/ajp14d/CENgroup3Projectf/blob/master/business_app/app/interviewQA.js"></script>
     
 </body>
 </html>
