--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -1,3 +1,5 @@
+{%extends "index.html" %}
+(% block content %}
 
 <!DOCTYPE html>
 <html>
@@ -92,3 +94,4 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 </body>
 </html>
 
+{% endblock} 
