Added accordion feature for all drop down hints

--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -27,9 +27,11 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <input type="text">
 </form>
     
-    <button class="accordion">Tips + Do's/Don"ts</button>
+    <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
-  <p>Testing...</p>
+  <p>Tip: This question is super broad for a reason. It can either make you or break you, so make sure to prepare a thoughtful response. Remember, this should feel more like a conversation than a question-answer time. Don’t forget to ask the interviewer questions, too. <br>
+		Do: Focus on your career. How did you get here? Where do you want to go? Answer this question by highlighting why you are the best candidate. Spend about 3 minutes on this response. <br>
+		Don’t: Tell your life story. Don’t ramble on. Don’t talk about your pets.</p>
 </div>
 
   
@@ -38,57 +40,140 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <input type="text">
 </form>
   
+    <button class="accordion">Tips + Do's/Don'ts</button>
+<div class="panel">
+  <p>Tip: Try to incorporate goals that would be great for your role working with this company and not just for your own gain. <br>
+		Do: Have well thought out goals that pertain to the position you want. <br>
+		Don’t: Mention your fitness goals and diet routine.</p>
+</div>
+    
   <p>Why should we hire you? What do you bring to the table?</p>
 <form>
 <input type="text">
 </form>
   
+    <button class="accordion">Tips + Do's/Don'ts</button>
+<div class="panel">
+  <p>Tip: Be confident. You made it to a face to face interview, so be proud. <br>
+		Do: Sell yourself. Talk about all the strengths you have that you know they are looking for. Talk about the “how” or “why” more than the “what.” Example: I am always on time and always meet deadlines vs I am reliable. <br>
+		Don’t: Simply state what’s already listed on the job description. </p>
+</div>
+    
   <p>Why do you want to work here? What do you know about this company and position?</p>
 <form>
 <input type="text">
 </form>
+    
+    <button class="accordion">Tips + Do's/Don'ts</button>
+<div class="panel">
+  <p>Tip: Research everything there is to know about the company. If you come into contact with someone who already works for the same company, name drop during the interview. <br>
+		Do: Know everything about the company. Be thoughtful with your responses. Make sure you have read the job description.  <br>
+		Don’t: Talk about other companies you want to work for. Say “I just wanted to apply and see what happened.” Or “I found it on a website.” Oversell the company’s importance.</p>
+</div>
   
   <p>What are you expecting as far as compensation?</p>
 <form>
 <input type="text">
 </form>
+    
+    <button class="accordion">Tips + Do's/Don'ts</button>
+<div class="panel">
+  <p>Tip: Use the word, “compensation” instead of “pay” or “salary” and feel free to ask about benefits too. <br>
+		Do: Avoid asking for details. If they call you and say they want to hire you, respond with “Thank you. As soon as you send me a formal written offer, I️ will make my decision.” That might be a better time to discuss the details. <br>
+		Don’t: Talk about compensation in an informal way. Negotiate.</p>
+</div>
   
   <p>What are your strengths and weaknesses?</p>
 <form>
 <input type="text">
 </form>
+    
+    <button class="accordion">Tips + Do's/Don'ts</button>
+<div class="panel">
+  <p>Tip: When talking about your weakness, turn it into a learning process and pair it with a strength. <br>
+		Do: Be confident. If you’re not confident about your strengths then the interviewer might not believe that those are your strengths. Talk about how it has become a strength, the process.  <br>
+		Don’t: Say you don’t have any weaknesses. No one is perfect. Not even batman.</p>
+</div>
   
   <p>Why do you want to leave your current job? Why did you leave your previous job?</p>
 <form>
 <input type="text">
 </form>
 
-
+    <button class="accordion">Tips + Do's/Don'ts</button>
+<div class="panel">
+  <p>Tip: if you bash your old job, your current boss will feel uncomfortable and probably won’t want to hire someone who speaks so poorly of those in authority. <br>
+		Do: Pair a compliment from your previous/current boss or environment with a reason why you left or are leaving. Be respectful of those who aren’t present.<br>
+		Don’t: Bash your current/previous boss. Complain about your current/previous work environment.</p>
+</div>
+    
  <p>How would your previous/current boss or coworkers describe you?</p>
 <form>
 <input type="text">
 </form>
+    
+      <button class="accordion">Tips + Do's/Don'ts</button>
+<div class="panel">
+  <p>Tip: This is a great time to answer with your strengths and weaknesses. See your answer for that question.<br>
+		Do: Be genuine and honest unless they hated you. <br>
+		Don’t: Name all your weaknesses. Say, “Well, we didn’t get along too well.”</p>
+</div>
+   
   
   <p>Tell me about a time you were in the midst of a stressful situation, and how did you deal with it?</p>
 <form>
 <input type="text">
 </form>
+    
+    
+         <button class="accordion">Tips + Do's/Don'ts</button>
+<div class="panel">
+  <p>Tip: be genuine. Don’t say you’ve never been stressed. Everyone has and your boss will appreciate your honesty. <br>
+		Do: Talk about a situation you were stressed and emphasize the steps you took to fix the situation. Show them that you deal with issues well. <br>
+		Don’t: Talk about a stressful situation without a resolution. Be disrespectful about the others involved in the situation.</p>
+</div>
+    
   
   <p>What are your goals for this position?</p>
 <form>
 <input type="text">
 </form>
   
+         <button class="accordion">Tips + Do's/Don'ts</button>
+<div class="panel">
+  <p>Tip: Have thoughtful goals that show initiative. Tailor them to the position you’re applying for so they are relevant. But make sure you can follow through. <br>
+		Do: Have goals because they are good to have and not just because it’s a great thing to mention in an interview. Be original. <br>
+		Don’t: Have a cliche goal. Mention a goal that is unrelated to the position. Say, “I want to drink more water.”</p>
+</div>
+    
   <p>Tell me about a time you disagreed with a decision that was make at work and how did you deal with it?</p>
 <form>
 <input type="text">
 </form>
+    
+    <button class="accordion">Tips + Do's/Don'ts</button>
+<div class="panel">
+  <p>Tip: The purpose of this question is to see how well you can deal with authority. Be careful here! <br>
+		Do: Say you’ll have a respectful conversation with your boss. Feel free to say, “ I️ have never had to deal with this sort of issue but I️ would probably ...” <br>
+		Don’t: Say you will just go around your boss’s back. Say you’ll just ignore your boss’s wishes. Ignore the problem.</p>
+</div>
   
   <p>Do you have any questions for us?</p>
 <form>
 <input type="text">
 </form>
+    
+    <button class="accordion">Tips + Do's/Don'ts</button>
+<div class="panel">
+  <p>Tip: This is a great time to flatter your interviewer by asking them questions. Ask them “What do you love about your job?” or “How would you rate my success?” These types of questions show respect and initiative. ALWAYS ask a question. <br>
+		Do: Have thoughtful questions prepared before hand. Know who you are talking to. Ask them specific questions about what they do.  <br>
+		Don’t: Ask only about the compensation. Say “I️ don’t have any questions.”</p>
+</div>
   
+    
+    
+  <!-- The following is javascript code for the accordion drop down -->
+    
 <script>
 var acc = document.getElementsByClassName("accordion");
 var i;
