--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -29,7 +29,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
     
     <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
-  <p>Tip: This question is super broad for a reason. It can either make you or break you, so make sure to prepare a thoughtful response. Remember, this should feel more like a conversation than a question-answer time. Don’t forget to ask the interviewer questions, too. <br>
+  <p>Tip: This question is super broad for a reason. It can either make you or break you, so make sure to prepare a thoughtful response. Remember, this should feel more like a conversation than a question-answer time. Don&#8217t forget to ask the interviewer questions, too. <br>
 		Do: Focus on your career. How did you get here? Where do you want to go? Answer this question by highlighting why you are the best candidate. Spend about 3 minutes on this response. <br>
 		Don’t: Tell your life story. Don’t ramble on. Don’t talk about your pets.</p>
 </div>
