--- a/business_app/app/templates/agenda.html
+++ b/business_app/app/templates/agenda.html
@@ -74,7 +74,6 @@ input[type=submit]:hover {
 
 
 <div class="container">
-  <form action="/action_page.php">
     <div class="row">
       <div class="col-25">
         <label for="ename">Event Name</label>
@@ -124,9 +123,8 @@ input[type=submit]:hover {
       </div>
     </div>
     <div class="row">
-      <input type="submit" value="Submit">
+      <input type="submit" value="Submit" href="agenda.html">
     </div>
-  </form>
 </div>
 
 </body>
